--- a/leili.bib
+++ b/leili.bib
@@ -149,6 +149,22 @@
   owner     = {lilei.02},
 }
 
+@Patent{he2022method,
+  nationality = {US},
+  number      = {11,265,598 B2},
+  year        = {2022},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Network Tech Co.},
+  author      = {He, Yi and Yang, Cheng and Li, Gen and Li, Yitan and Li, Lei},
+  day         = {1},
+  dayfiled    = {29},
+  month       = mar,
+  monthfiled  = {#mar#},
+  title       = {Method and Device for Determining Duplicate Video},
+  comment     = {一种重复视频的判断方法及装置},
+  owner       = {lilei.02},
+}
+
 @InProceedings{chen2022loren,
   author    = {Jiangjie Chen and Qiaoben Bao and Changzhi Sun and Xinbo Zhang and Jiaze Chen and Hao Zhou and Yanghua Xiao and Lei Li},
   booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
@@ -289,6 +305,22 @@ The code and dataset are publicly available at \url{https://github.com/rgwt123/S
   abstract  = {Developing  a  unified  multilingual  model  haslong  been  a  pursuit  for  machine  translation. However, existing approaches suffer from performance degradation — a single multilingualmodel  is  inferior  to  separately  trained  bilingual ones on rich-resource languages. We conjecture  that such  a phenomenon  is due  to interference  caused  by  joint  training  with  multiple  languages.   To  accommodate  the  issue,we  propose  CIAT,  an  adapted  Transformermodel  with  a  small  parameter  overhead  formultilingual  machine  translation.   We  evaluate CIAT on multiple benchmark datasets, including  IWSLT,  OPUS-100,  and  WMT.  Experiments  show  that  CIAT  consistently  outperforms strong multilingual baselines on 64 of  total  66  language  directions,  42  of  whichsee  above  0.5  BLEU  improvement. Our code  is  available  at https://github.com/Yaoming95/CIAT.},
   code      = {https://github.com/Yaoming95/CIAT},
   eprint    = {https://arxiv.org/abs/2104.08154},
+}
+
+@Patent{li2021audioa,
+  nationality = {US},
+  number      = {11,182,426 B2},
+  year        = {2021},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Network Tech Co.},
+  author      = {Gen Li and Lei Li and Yi He},
+  day         = {23},
+  dayfiled    = {29},
+  month       = nov,
+  monthfiled  = {#dec#},
+  title       = {Audio Retrieval and Identification Method and Device},
+  comment     = {一种音频检索识别方法及装置},
+  owner       = {lilei.02},
 }
 
 @InProceedings{wang2021cnewsum,
@@ -495,6 +527,22 @@ The code and dataset are publicly available at \url{https://github.com/rgwt123/S
   eprint    = {https://arxiv.org/abs/2106.05530},
 }
 
+@Patent{he2021video,
+  nationality = {US},
+  number      = {11,055,536 B2},
+  year        = {2021},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Network Tech Co.},
+  author      = {He, Yi and Li, Lei and Yang, Cheng and Li, Gen and Li, Yitan},
+  day         = {6},
+  dayfiled    = {29},
+  month       = jul,
+  monthfiled  = {#dec#},
+  title       = {Video Feature Extraction Method and Device},
+  comment     = {一种视频特征提取方法及装置},
+  owner       = {lilei.02},
+}
+
 @InProceedings{long2021generative,
   author    = {Long, Quanyu and Wang, Mingxuan and Li, Lei},
   booktitle = {Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (NAACL-HLT)},
@@ -642,13 +690,16 @@ The code and dataset are publicly available at \url{https://github.com/rgwt123/S
 
 @Patent{chen2021methoda,
   nationality = {US},
-  number      = {16/981,240},
+  number      = {10,984,542 B2},
   year        = {2021},
   yearfiled   = {2018},
   author      = {Chen, Yangyu and He, Yi and Li, Lei},
   day         = {20},
+  dayfiled    = {20},
   month       = apr,
+  monthfiled  = {#nov#},
   title       = {Method and Device for determining geometric transformation relation for images},
+  comment     = {用于确定图像间的几何变换关系的方法和装置},
 }
 
 @Patent{he2021image,
@@ -705,6 +756,22 @@ The code and dataset are publicly available at \url{https://github.com/rgwt123/S
   eprint    = {https://arxiv.org/abs/2101.11349},
   owner     = {lilei.02},
   thumbnail = {song2021triangular_search_bidding_example.jpg},
+}
+
+@Patent{li2021audio,
+  nationality = {US},
+  number      = {10,950,255 B2},
+  year        = {2021},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Network Tech Co.},
+  author      = {Gen Li and Lei Li and Yi He},
+  day         = {16},
+  dayfiled    = {29},
+  month       = mar,
+  monthfiled  = {#dec#},
+  title       = {Audio Fingerprint Extraction Method and Device},
+  comment     = {一种音频指纹提取方法及装置},
+  owner       = {lilei.02},
 }
 
 @Patent{she2021method,
@@ -794,6 +861,19 @@ Such new perspective leads to a refreshed understanding of the roles of second m
   thumbnail = {zhang2021taxonomy_completion_task.svg},
 }
 
+@Patent_pending{wang2021speech,
+  assignee    = {Bytedance},
+  author      = {Mingxuan Wang and Qianqian Dong and Lei Li},
+  month       = feb,
+  monthfiled  = {#feb#},
+  nationality = {US},
+  number      = {2021/0271826 A1},
+  owner       = {lilei.02},
+  title       = {Speech translation method, electronic device and computer-readable storage medium},
+  year        = {2021},
+  yearfiled   = {2021},
+}
+
 @Patent{chen2021method,
   nationality = {CN},
   number      = {201811457980.2},
@@ -834,7 +914,7 @@ Such new perspective leads to a refreshed understanding of the roles of second m
   day         = {19},
   dayfiled    = {29},
   month       = jan,
-  monthfiled  = mar,
+  monthfiled  = {#mar#},
   title       = {Duplicate video detection method and device},
   comment     = {一种重复视频的判断方法及装置},
   owner       = {lilei.02},
@@ -1104,7 +1184,7 @@ Such new perspective leads to a refreshed understanding of the roles of second m
   day         = {29},
   dayfiled    = {29},
   month       = may,
-  monthfiled  = dec,
+  monthfiled  = {#dec#},
   title       = {Video Feature Extraction Method and Device},
   comment     = {一种视频特征提取方法及装置},
   owner       = {lilei.02},
