adding new papers

--- a/leili.bib
+++ b/leili.bib
@@ -1,3 +1,31 @@
+@Article{chu2021icm,
+  author   = {Ruihang Chu and Yukang Chen and Tao Kong and Lu Qi and Lei Li},
+  journal  = {IEEE Robotics and Automation Letters (RA-L)},
+  title    = {{ICM-3D}: Instantiated Category Modeling for 3D Instance Segmentation},
+  year={2022},
+  volume={7},
+  number={1},
+  pages={57-64},
+  doi={10.1109/LRA.2021.3108483}}
+
+@InProceedings{wang2022lightseq2,
+  author    = {Xiaohui Wang, Yang Wei, Guyue Huang, Ying Xiong, Xian Qian, Yufei Ding, Mingxuan Wang, Lei Li},
+  booktitle = {Proceedings of The International Conference for High Performance Computing, Networking, Storage and Analysis ({SC}'22)},
+  title     = {{LightSeq2}: Accelerated Training for Transformer-based Models on {GPUs}},
+  year      = {2022},
+  month     = nov,
+  code      = {https://github.com/bytedance/lightseq},
+  eprint    = {https://arxiv.org/abs/2110.05722},
+}
+
+@InProceedings{lu2022uncovering,
+  author    = {Yunfei Lu and Peng Cui and Linyun Yu and Lei Li and Wenwu Zhu},
+  booktitle = {the 28th SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)},
+  title     = {Uncovering the Heterogeneous Effects of Preference Diversity on User Activeness: A Dynamic Mixture Model},
+  year      = {2022},
+  month     = aug,
+}
+
 @InProceedings{chen2022mtg,
   author    = {Chen, Yiran and Song, Zhenqiao and Wu, Xianze and Wang, Danqing and Xu, Jingjing and Chen, Jiaze and Zhou, Hao and Li, Lei},
   booktitle = {Proceedings of the 2022 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (NAACL-HLT Findings)},
@@ -213,15 +241,6 @@
   eprint    = {https://arxiv.org/abs/2110.07515},
 }
 
-@Article{chu2021icm,
-  author   = {Ruihang Chu and Yukang Chen and Tao Kong and Lu Qi and Lei Li},
-  journal  = {IEEE Robotics and Automation Letters (RA-L)},
-  title    = {{ICM-3D}: Instantiated Category Modeling for 3D Instance Segmentation},
-  year={2022},
-  volume={7},
-  number={1},
-  pages={57-64},
-  doi={10.1109/LRA.2021.3108483}}
   abstract = {Separating 3D point clouds into individual instances is an important task for 3D vision. It is challenging due to the unknown and varying number of instances in a scene. Existing deep learning based works focus on a two-step pipeline: first learn a feature embedding and then cluster the points. Such a two-step pipeline leads to disconnected intermediate objectives. In this paper, we propose an integrated reformulation of 3D instance segmentation as a per-point classification problem. We propose ICM-3D, a single-step method to segment 3D instances via instantiated categorization. The augmented category information is automatically constructed from 3D spatial positions. We conduct extensive experiments to verify the effectiveness of ICM-3D and show that it obtains inspiring performance across multiple frameworks, backbones and benchmarks.},
   eprint   = {https://arxiv.org/abs/2108.11771},
 }
@@ -2246,11 +2265,10 @@ clickbait detection and generic text classification tasks demonstrate that our p
 
 @InProceedings{li2006providing,
   author    = {Li, Lei and Liu, Qiaoling and Tao, Yunfeng and Zhang, Lei and Zhou, Jian and Yu, Yong},
-  title     = {Providing an Uncertainty Reasoning Service for Semantic Web Application},
   booktitle = {Asia-Pacific Web Conference},
+  title     = {Providing an Uncertainty Reasoning Service for Semantic Web Application},
   year      = {2006},
   pages     = {628--639},
-  file      = {:pubs/li2006providing - Providing an Uncertainty Reasoning Service for Semantic Web Application.pdf:PDF},
 }
 
 @Unpublished{baoPreprintpnat,
@@ -2271,13 +2289,6 @@ clickbait detection and generic text classification tasks demonstrate that our p
   author = {Youzhi Tian and Zhou Yu and Cheng Yang and Hang Li and Lei Li},
   title  = {Conversational Contextualized Multimodal Representation Learning},
   year   = {Preprint},
-}
-
-@Unpublished{wangPreprintlightseq2,
-  author = {Xiaohui Wang and Ying Xiong and Xian Qian and Yang Wei and Lei Li and Mingxuan Wang},
-  title  = {{LightSeq2}: Accelerated Training for Transformer-based Models on GPUs},
-  year   = {Preprint},
-  eprint = {https://arxiv.org/abs/2110.05722},
 }
 
 @Unpublished{xuPreprintreciprocal,
