--- a/leili.bib
+++ b/leili.bib
@@ -9,7 +9,7 @@
   doi={10.1109/LRA.2021.3108483}}
 
 @InProceedings{wang2022lightseq2,
-  author    = {Xiaohui Wang, Yang Wei, Guyue Huang, Ying Xiong, Xian Qian, Yufei Ding, Mingxuan Wang, Lei Li},
+  author    = {Xiaohui Wang and Yang Wei and Ying Xiong and Guyue Huang and Xian Qian and Yufei Ding and Mingxuan Wang and Lei Li},
   booktitle = {Proceedings of The International Conference for High Performance Computing, Networking, Storage and Analysis ({SC}'22)},
   title     = {{LightSeq2}: Accelerated Training for Transformer-based Models on {GPUs}},
   year      = {2022},
