--- a/leili.bib
+++ b/leili.bib
@@ -16,6 +16,22 @@
   month     = aug,
 }
 
+@Patent{yang2022method,
+  nationality = {US},
+  number      = {US11403835B2},
+  year        = {2022},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Network Tech Co.},
+  author      = {Yang, Cheng and He, Yi and Li, Lei},
+  day         = {2},
+  dayfiled    = {12},
+  month       = aug,
+  monthfiled  = {#sep#},
+  title       = {Method and device for processing feature point of image},
+  comment     = {用于处理图像的特征点的方法和装置},
+  owner       = {lilei.02},
+}
+
 @InProceedings{chen2022mtg,
   author    = {Chen, Yiran and Song, Zhenqiao and Wu, Xianze and Wang, Danqing and Xu, Jingjing and Chen, Jiaze and Zhou, Hao and Li, Lei},
   booktitle = {Proceedings of the 2022 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (NAACL-HLT Findings)},
@@ -60,6 +76,23 @@
   title     = {On the Learning of Non-autoregressive Transformers},
   year      = {2022},
   month     = jul,
+}
+
+@Patent{cao2022method,
+  nationality = {US},
+  number      = {US11379664B2},
+  year        = {2022},
+  yearfiled   = {2020},
+  assignee    = {Beijing Bytedance Network Tech Co.},
+  author      = {Cao, Jun and Li, Lei and Wang, Mingxuan and Zhu, Peihao},
+  day         = {5},
+  dayfiled    = {28},
+  month       = jul,
+  monthfiled  = {#feb#},
+  title       = {Method for acquiring a parallel corpus, electronic device, and storage medium},
+  comment     = {平行语料获取方法、装置、电子设备、及存储
+介质},
+  owner       = {lilei.02},
 }
 
 @InProceedings{li2022learning,
@@ -193,12 +226,12 @@
   year        = {2022},
   yearfiled   = {2018},
   assignee    = {Beijing Bytedance Network Tech Co.},
-  author      = {He, Yi and Yang, Cheng and Li, Gen and Li, Yitan and Li, Lei},
+  author      = {He, Yi and Li, Lei and Yang, Cheng and Li, Gen and Li, Yitan},
   day         = {1},
   dayfiled    = {29},
   month       = mar,
   monthfiled  = {#mar#},
-  title       = {Method and Device for Determining Duplicate Video},
+  title       = {Method and device for determining duplicate video},
   comment     = {一种重复视频的判断方法及装置},
   owner       = {lilei.02},
 }
@@ -1537,7 +1570,6 @@ robust to rare sentence context by imposing learned kernels to capture the close
   month     = aug,
   publisher = {ACM},
   abstract  = {Recent years witness the merge of social networks and user-generatedcontent (UGC) platforms. In these new platforms, users establishlinks to others not only driven by their social relationships in thephysical world but also driven by the contents published by others.During this merging process, social networks gradually integrateboth social and content links and become unprecedentedly complicated,with the motivation to exploit both the advantages of socialviscosity and content attractiveness to reach the best customerretention situation. However, due to the lack of fine-grained datarecording such merging phenomena, the co-driven mechanism ofsocial and content links in churn phenomena remains unexplored.How do social and content factors jointly influence customers’churn? What is the best ratio of social and content links for a user’sretention? Is there a model to capture this co-driven mechanism inusers’ churn phenomena?In this paper, we collect a real-world dataset with more than 5.77million users and 925 million links, with each link being tagged asa social one or a content one. We find that both social and contentlinks have a significant impact on users’ churn and theywork jointlyas a complicated mixture effect. As a result, we propose a novelsurvival model, which incorporates both social and content factors,to predict churn probability over time. Our model successfully fitsthe churn distribution in reality and accurately predicts the churnrate of different subpopulations in the future. By analyzing themodeling parameters, we try to strike a balance between socialdrivenand content-driven links in a user’s social network to reachthe lowest churn rate. Our model and findings may have potentialimplications for the design of future social media.},
-  file      = {:pubs/lu-kdd2019-social-content-links.pdf:PDF},
   owner     = {leili},
   timestamp = {2019-04-30},
 }
@@ -1581,7 +1613,6 @@ robust to rare sentence context by imposing learned kernels to capture the close
   year      = {2019},
   month     = jul,
   abstract  = {Text-based question answering (TBQA) has been studied extensively in recent years. Most existing approaches focus on finding the answer to a question within a single paragraph. However, many difficult questions require multiple supporting evidence from scattered text across two or more documents. In this paper, we propose the Dynamically Fused Graph Network (DFGN), a novel method to answer those questions requiring multiple scattered evidence and reasoning over them. Inspired by human’s step-by-step reasoning behavior, DFGN includes a dynamic fusion layer that starts from the entities mentioned in the given query, explores along the entity graph dynamically built from the text, and gradually finds relevant supporting entities from the given documents. We evaluate DFGN on HotpotQA, a public TBQA dataset requiring multi-hop reasoning. DFGN achieves competitive results on the public board. Furthermore, our analy- sis shows DFGN could produce interpretable reasoning chains.},
-  file      = {:pubs/qiu-acl2019-dfgn.pdf:PDF},
 }
 
 @InProceedings{zhang2019generating,
@@ -1591,7 +1622,6 @@ robust to rare sentence context by imposing learned kernels to capture the close
   year      = {2019},
   month     = jul,
   abstract  = {Efficiently building an adversarial attacker fornatural language processing (NLP) tasks is areal challenge. Firstly, as the sentence spaceis discrete, it is difficult to make small perturbations along the direction of gradients. Secondly,the fluency of the generated examples can not be guaranteed. In this paper, we propose MHA, which addresses both problemsby performing Metropolis-Hastings sampling,whose proposal is designed with the guidanceof gradients. Experiments on IMDB and SNLIshow that our proposed MHA outperforms thebaseline model on attacking capability. Adversarial training with MHA also leads to better robustness and performance.},
-  file      = {:pubs/zhang-acl2019generation-cgmh-adversarial.pdf:PDF},
 }
 
 @InProceedings{wu2019unified,
@@ -1619,7 +1649,6 @@ defending text-domain adversarial attacks. Moreover, such
 robustness empowers the use of visual cues to accurately
 resolve word dependencies in novel sentences.},
   addendum  = {Oral},
-  file      = {:pubs/wu-cvpr2019-vse.pdf:PDF},
 }
 
 @Patent{jiang2019construction,
@@ -1678,7 +1707,7 @@ is released at https://github.com/NingMiao/CGMH},
   month     = dec,
   abstract  = {Time series are widely used as signals in many classification/regression tasks. It is ubiquitous that time series contains many missing values. Given multiple correlated time series data, how to fill in missing values and to predict their class labels? Existing imputation methods often impose strong assumptions of the underlying data generating process, such as linear dynamics in the state space. In this paper, we propose BRITS, a novel method based on recurrent neural networks for missing value imputation in time series data. Our proposed method directly learns the missing values in a bidirectional recurrent dynamical system, without any specific assumption. The imputed values are treated as variables of RNN graph and can be effectively updated during the backpropagation.BRITS has three advantages: (a) it can handle multiple correlated missing values in time series; (b) it generalizes to time series with nonlinear dynamics underlying; (c) it provides a data-driven imputation procedure and applies to general settings with missing data.We evaluate our model on three real-world datasets, including an air quality dataset, a health-care data, and a localization data for human activity. Experiments show that our model outperforms the state-of-the-art methods in both imputation and classification/regression accuracies.},
   code      = {https://github.com/caow13/BRITS},
-  url       = {https://arxiv.org/abs/1805.10572},
+  eprint    = {https://arxiv.org/abs/1805.10572},
 }
 
 @InProceedings{shi2018tree,
@@ -1896,7 +1925,6 @@ clickbait detection and generic text classification tasks demonstrate that our p
   year      = {2013},
   abstract  = {The parameters of temporal models, such as dynamic Bayesian networks, may be modelled in a Bayesian context as static or atemporal variables that influence transition probabilities at every time step. Particle filters fail for models that include such variables, while methods that use Gibbs sampling of parameter variables may incur a per-sample cost that grows linearly with the length of the observation sequence. Storvik devised a method for incremental computation of exact sufficient statistics that, for some cases, reduces the per-sample cost to a constant. In this paper, we demonstrate a connection between Storvik's filter and a Kalman filter in parameter space and establish more general conditions under which Storvik's filter works. Drawing on an analogy to the extended Kalman filter, we develop and analyze, both theoretically and experimentally, a Taylor approximation to the parameter posterior that allows Storvik's method to be applied to a broader class of models. Our experiments on both synthetic examples and real applications show improvement over existing methods.},
   comment   = {The full version appeared as Tech. Rep. UCB/EECS-2013-48.},
-  file      = {:pubs/erol2013extended - The Extended Parameter Filter.pdf:PDF},
   owner     = {leili},
   timestamp = {2013.05.08},
 }
@@ -1909,7 +1937,6 @@ clickbait detection and generic text classification tasks demonstrate that our p
   address   = {New York, NY, USA},
   publisher = {ACM},
   abstract  = {User review is a crucial component of open mobile app mar- kets such as the Google Play Store. How do we automatically summarize millions of user reviews and make sense out of them? Unfortunately, beyond simple summaries such as histograms of user ratings, there are few analytic tools that can provide insights into user reviews. In this paper, we propose WisCom, a system that can analyze tens of millions user ratings and comments in mobile app markets at three different levels of detail. Our system is able to (a) discover inconsistencies in reviews; (b) identify reasons why users like or dislike a given app, and provide an interactive, zoomable view of how users’ reviews evolve over time; and (c) provide valuable insights into the entire app market, identifying users’ major concerns and preferences of different types of apps. Results using our techniques are reported on a 32GB dataset consisting of over 13 million user reviews of 171,493 Android apps in the Google Play Store. We discuss how the techniques presented herein can be deployed to help a mobile app market operator such as Google as well as individual app developers and end-users.},
-  file      = {:pubs/fu2013why - Why People Hate Your App - Making Sense of User Feedback in a Mobile App Store.pdf:PDF},
   owner     = {leili},
   timestamp = {2013.06.18},
 }
@@ -1919,10 +1946,11 @@ clickbait detection and generic text classification tasks demonstrate that our p
   booktitle = {the 27th Conference on Neural Information Processing Systems(NeurIPS)},
   title     = {Multilinear Dynamical Systems for Tensor Time Series},
   year      = {2013},
-  file      = {:pubs/rogers2013multilinear - Multilinear Dynamical Systems for Tensor Time Series.pdf:PDF},
+  abstract  = {Data in the sciences frequently occur as sequences of multidimensional arrays called tensors. How can hidden, evolving trends in such data be extracted while preserving the tensor structure? The model that is traditionally used is the linear dynamical system (LDS) with Gaussian noise, which treats the latent state and observation at each time slice as a vector. We present the multilinear dynamical system (MLDS) for modeling tensor time series and an expectation–maximization (EM) algorithm to estimate the parameters. The MLDS models each tensor observation in the time series as the multilinear projection of the corresponding member of a sequence of latent tensors. The latent tensors are again evolving with respect to a multilinear projection. Compared to the LDS with an equal number of parameters, the MLDS achieves higher prediction accuracy and marginal likelihood for both artificial and real datasets.},
+  code      = {https://github.com/lileicc/mlds},
   owner     = {leili},
-  software  = {software/mlds-r662.zip},
   timestamp = {2013.09.11},
+  url       = {mlds/},
 }
 
 @InProceedings{matsubara2013f,
@@ -1952,7 +1980,6 @@ clickbait detection and generic text classification tasks demonstrate that our p
   year      = {2012},
   address   = {New York, NY, USA},
   publisher = {ACM},
-  file      = {:pubs/henderson2012rolx - RolX_ Structural Role Extraction and Mining in Large Graphs.pdf:PDF},
   owner     = {leili},
   timestamp = {2012.07.18},
 }
@@ -1964,7 +1991,6 @@ clickbait detection and generic text classification tasks demonstrate that our p
   year      = {2012},
   address   = {New York, NY, USA},
   publisher = {ACM},
-  file      = {:pubs/matsubara2012rise - Rise and Fall Patterns of Information Diffusion_ Model and Implications.pdf:PDF},
   owner     = {leili},
   timestamp = {2012.07.18},
 }
@@ -1975,7 +2001,6 @@ clickbait detection and generic text classification tasks demonstrate that our p
   title        = {Mobile Phone Graph Evolution: Findings, Model and Interpretation},
   year         = {2011},
   entrysubtype = {workshop},
-  file         = {:pubs/liu2011mobile - Mobile Phone Graph Evolution_ Findings, Model and Interpretation.pdf:PDF},
   owner        = {leili},
   timestamp    = {2011.11.30},
 }
@@ -1987,7 +2012,6 @@ clickbait detection and generic text classification tasks demonstrate that our p
   year      = {2011},
   address   = {New York, NY, USA},
   publisher = {ACM},
-  file      = {:pubs/henderson2011its - It's Who You Know_ Graph Mining Using Recursive Structural Features.pdf:PDF},
   isbn      = {978-1-4503-0813-7/11/08},
   location  = {San Diego, California},
   owner     = {leili},
@@ -2002,7 +2026,6 @@ clickbait detection and generic text classification tasks demonstrate that our p
   address   = {New York, NY, USA},
   publisher = {ACM},
   abstract  = {Efficient thermal management is important in modern data centers as cooling consumes up to 50% of the total energy. Unlike previous work, we consider proactive thermal management, whereby servers can predict potential overheating events due to dynamics in data center configuration and workload, giving operators enough time to react. However, such forecasting is very challenging due to data center scales and complexity. Moreover, such a physical system is influenced by cyber effects, including workload scheduling in servers. We propose ThermoCast, a novel thermal forecasting model to predict the temperatures surrounding the servers in a data center, based on continuous streams of temperature and airflow measurements. Our approach is (a) capable of capturing cyber- physical interactions and automatically learning them from data; (b) computationally and physically scalable to data center scales; (c) able to provide online prediction with real-time sensor mea- surements. The paper’s main contributions are: (i) We provide a systematic approach to integrate physical laws and sensor observa- tions in a data center; (ii) We provide an algorithm that uses sensor data to learn the parameters of a data center’s cyber-physical sys- tem. In turn, this ability enables us to reduce model complexity compared to full-fledged fluid dynamics models, while maintain- ing forecast accuracy; (iii) Unlike previous simulation-based stud- ies, we perform experiments in a production data center. Using real data traces, we show that ThermoCast forecasts temperature 2× better than a machine learning approach solely driven by data, and can successfully predict thermal alarms 4.2 minutes ahead of time.},
-  file      = {:pubs/li2011thermocast - ThermoCast_ A Cyber-Physical Forecasting Model for Data Centers.pdf:PDF},
   isbn      = {978-1-4503-0813-7/11/08},
   location  = {San Diego, California},
   owner     = {leili},
@@ -2015,8 +2038,8 @@ clickbait detection and generic text classification tasks demonstrate that our p
   booktitle = {Proceedings of the 28th International Conference on Machine Learning (ICML)},
   title     = {Time Series Clustering: Complex is Simpler!},
   year      = {2011},
+  code      = {https://github.com/lileicc/dynammo/tree/master/clds},
   comment   = {Please see for updated and additional experiments in Chap 5 of the thesis "Fast algorithms for mining co-evolving time series".},
-  file      = {:pubs/li2011time - Time Series Clustering_ Complex is Simpler!.pdf:PDF;Dataset1-mocap16:software/li2011time - Time Series Clustering_ Complex is Simpler!.zip:URL;Dataset2-mocap35:software/mocap35-rfoot_amc.zip:URL},
   location  = {Bellevue, Washington},
   numpages  = {8},
   owner     = {leili},
@@ -2030,7 +2053,6 @@ clickbait detection and generic text classification tasks demonstrate that our p
   booktitle = {SIAM International Conference on Data Mining (SDM)},
   title     = {{WindMine}: Fast and Effective Mining of Web-click Sequences},
   year      = {2011},
-  file      = {:pubs/sakurai2011windmine - WindMine_ Fast and Effective Mining of Web-click Sequences.pdf:PDF},
   owner     = {leili},
   timestamp = {2011.03.14},
 }
@@ -2053,7 +2075,6 @@ clickbait detection and generic text classification tasks demonstrate that our p
   year         = {2010},
   pages        = {341--344},
   entrysubtype = {workshop},
-  file         = {:pubs/li2010fast - Fast Algorithms for Time Series Mining.pdf:PDF},
   owner        = {leili},
   slides       = {pubs/li-icde10-slides.pdf},
   timestamp    = {2010.03.21},
@@ -2069,7 +2090,6 @@ clickbait detection and generic text classification tasks demonstrate that our p
   publisher = {ACM},
   series    = {KDD '10},
   doi       = {http://doi.acm.org/10.1145/1835804.1835828},
-  file      = {:pubs/henderson2010metric - Metric forensics_ a multi-level approach for mining volatile graphs.pdf:PDF},
   isbn      = {978-1-4503-0055-1},
   keywords  = {graph mining, temporal analysis, volatile graphs},
   location  = {Washington, DC, USA},
@@ -2228,13 +2248,13 @@ clickbait detection and generic text classification tasks demonstrate that our p
   pages     = {471--479},
   publisher = {ACM},
   abstract  = {Multi-core processors with ever increasing number of cores per chip are becoming prevalent in modern parallel computing. Our goal is to make use of the multi-core as well as multi-processor architectures to speed up data mining algorithms. Specifically, we present a parallel algorithm for approximate learning of Linear Dynamical Systems (LDS), also known as Kalman Filters (KF). LDSs are widely used in time series analysis such as motion capture modeling and visual tracking etc. We propose Cut-And-Stitch (CAS), a novel method to handle the data dependencies due to the chain structure of hidden variables in LDS, so as to parallelize the EM- based parameter learning algorithm. We implement the algorithm using OpenMP on both a supercomputer and a quad-core commercial desktop. The experimental results show that parallel algorithms using Cut-And-Stitch achieve comparable accuracy and almost linear speedups over the serial version. In addition, Cut-And-Stitch can be generalized to other models with similar linear structures such as Hidden Markov Models (HMM) and Switching Kalman Filters (SKF).},
-  file      = {:pubs/li2008cut - Cut-and-stitch_ efficient parallel learning of linear dynamical systems on smps.pdf:PDF},
   isbn      = {978-1-60558-193-4},
   location  = {Las Vegas, Nevada, USA},
   owner     = {leili},
   slides    = {pub/li-2008-cut-slides.pdf},
   software  = {software/paralearn.0.1.zip},
   timestamp = {2009.03.04},
+  url       = {paralearn/},
 }
 
 @InProceedings{sakurai2008efficient,
